fix: settings content overflow issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,13 +231,13 @@ main {
   flex-direction: column;
 
   /* NOTE: a band-aid for the bottom content being cut off */
-  /* padding-bottom: 7rem; */
+  padding-bottom: 7rem;
 }
 
 .general-body {
-  padding: 0 4rem;
+  /* padding: 0 4rem; */
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   background: var(--surface-light);
   overflow-y: auto;
   transition: padding 0.25s;
@@ -275,6 +275,7 @@ main {
   width: 100%;
   padding: 0 4rem;
   transition: padding 0.25s;
+  background-color: var(--surface-dark);
 
   ul {
     /* padding: 1.2rem 0; */
@@ -478,6 +479,7 @@ button[type="submit"]:active,
   gap: 1.2rem;
   align-items: center;
   position: relative;
+  /* padding-right: 2rem; */
 
   .material-symbols-rounded {
     font-size: 2.8rem;
@@ -857,7 +859,6 @@ nav {
     flex-wrap: wrap;
     justify-content: space-between;
     max-height: 100%;
-    /* height: 100%; */
   }
 }
 
@@ -885,10 +886,16 @@ nav {
       font-weight: 400;
     }
   }
+
+  .content {
+    height: 100%;
+  }
 }
 
 .general-body > section {
   gap: 2rem;
+  padding: 2rem 4rem;
+  overflow: auto;
 
   > header {
     h1 {
@@ -899,6 +906,12 @@ nav {
       font-size: 1.6rem;
       font-weight: 400;
     }
+  }
+
+  .content {
+    border-radius: 0;
+    overflow-y: auto;
+    padding-right: 1rem;
   }
 
   .sub-content {
@@ -2011,8 +2024,10 @@ body:is(.popup) {
 }
 
 @media screen and (min-width: 900px) {
-  .general-header,
-  .general-body {
+  .general-header {
     padding: 0 14rem;
+  }
+  .general-body > section {
+    padding: 2rem 14rem;
   }
 }
